<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shoe_shop_logo"
            android:src="@drawable/ic_shoes"
            app:layout_constraintBottom_toTopOf="@+id/tv_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/tv_label"
            android:text="@string/email_label"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <EditText
            android:id="@+id/et_email"
            style="@style/tv_label"
            android:background="@color/colorWhite"
            android:hint="@string/enter_you_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="45dp"
            android:nextFocusDown="@+id/et_pwd"
            android:padding="6dp"
            android:textColorHint="@color/colorPrimaryGray"
            app:layout_constraintBottom_toTopOf="@+id/tv_pwd"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_pwd"
            style="@style/tv_label"
            android:text="@string/pwd_label"
            app:layout_constraintBottom_toTopOf="@+id/et_pwd"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/tv_label"
            android:background="@color/colorWhite"
            android:hint="@string/enter_you_pwd_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="45dp"
            android:padding="6dp"
            android:textColorHint="@color/colorPrimaryGray"
            app:layout_constraintBottom_toTopOf="@+id/bt_new_login"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pwd" />

        <Button
            android:id="@+id/bt_new_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBlack"
            android:text="@string/new_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/tv_or"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

        <TextView
            android:id="@+id/tv_or"
            style="@style/tv_label"
            android:gravity="center_horizontal"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@+id/bt_login_with_existing"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/bt_new_login" />

        <Button
            android:id="@+id/bt_login_with_existing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:text="@string/login_with_existing_account"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_or" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>